--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "author": "Strahinja Ajvaz",
   "license": "MIT",
   "scripts": {
+    "start": "node server/server.js",
     "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env produnction",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
@@ -23,6 +25,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.0",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^22.0.4",
     "live-server": "^1.2.0",
